--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -14,27 +18,56 @@
 
 .header .header-wraper {
   margin: 22px 30px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header .logo {
   display: inline-block;
 }
 
+.header .social-icons {
+  display: inline-block;
+}
+
+.header .social-icons .item {
+  display: inline-block;
+  margin-right: 18px;
+  cursor: pointer;
+}
+
+.header .social-icons .item:last-child {
+  margin-right: 0px;
+}
+
 .main-menu {
   display: inline-block;
-  margin-left: 93px;
 }
 
 .main-menu ul {
-  margin: 0;
+  padding: 0;
 }
 
 .main-menu ul li {
-  display: inline;
+  display: inline-block;
   margin-right: 80px;
-  color: white;
 }
 
 .main-menu ul li:last-child {
   margin-right: 0px;
+}
+
+.main-menu ul li a {
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.main-menu ul li a:hover {
+  color: #097e89;
+}
+
+.main-menu ul li .active {
+  color: #097e89;
 }
