--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,17 +1,30 @@
 .main-menu {
     display: inline-block;
-    margin-left: 93px;
 
     ul {
-        margin: 0;
+        padding: 0;
 
         li {
-            display: inline;
+            display: inline-block;
             margin-right: 80px;
-            color: white;
 
             &:last-child {
                 margin-right: 0px;
+            }
+
+            a {              
+                color: #ffffff;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 26px;
+
+                &:hover {
+                    color: $blue;
+                }
+            }
+            
+            .active {
+                color: $blue;
             }
         }
     }
