--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@
     background: purple;
     z-index: 10;
 
-    .header-wraper {
+    .header-wrapper {
         margin: 22px 30px;
         display: flex;
         justify-content: space-between;
