--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,8 +2,15 @@
     display: block;
     position: relative;
     margin: 0;
+    font-family: Sansation;
 }
 
 a {
     text-decoration: none;
+    color: white;
+}
+
+.button {
+    text-align: center;
+    cursor: pointer;
 }
