--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
 @import 'colors.scss';
+@import 'fonts.scss';
 @import 'base.scss';
 @import 'header.scss';
 @import 'nav.scss';
+@import 'about-us.scss';
