--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,15 @@ a {
   cursor: pointer;
 }
 
+.main-title {
+  padding: 55px 0;
+  text-align: center;
+  font-size: 40px;
+  color: white;
+  text-transform: uppercase;
+  background: #373737;
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -148,4 +157,51 @@ a {
   border: #05a0af solid;
   border-radius: 2px;
   background: #05a0af;
+}
+
+.services .services-wrapper {
+  display: flex;
+}
+
+.services .services-wrapper .service {
+  padding: 114px 110px;
+  background: #3d3d3d;
+  color: white;
+}
+
+.services .services-wrapper .service:hover {
+  background: #097e89;
+}
+
+.services .services-wrapper .service .image {
+  padding-bottom: 55px;
+}
+
+.services .services-wrapper .service .image img {
+  margin: 0 auto;
+}
+
+.services .services-wrapper .title {
+  padding-bottom: 20px;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+}
+
+.services .services-wrapper .text {
+  font-size: 14px;
+  text-align: center;
+}
+
+.services .services-wrapper .button-wrapper {
+  margin-top: 30px;
+}
+
+.services .services-wrapper .button-wrapper .button {
+  margin: 0 auto;
+  background: #959595;
+  padding: 10px 28px;
+  text-transform: uppercase;
+  width: fit-content;
 }
