--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,3 +14,12 @@ a {
     text-align: center;
     cursor: pointer;
 }
+
+.main-title {
+    padding: 55px 0;
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    text-transform: uppercase;
+    background: $gray;
+}
