--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,2 +1,6 @@
 $blue: #097e89;
 $button-about-us: #05a0af; 
+$gray: #373737;
+$gray-service: #3d3d3d;
+$gray-button: #959595;
+$blue-service: #097e89;
