Added clients styles.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,10 @@ a {
     cursor: pointer;
 }
 
+.white-bg {
+    background: white;
+}
+
 .main-title {
     padding: 55px 0;
     text-align: center;
