--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,10 @@ a {
   cursor: pointer;
 }
 
+.white-bg {
+  background: white;
+}
+
 .main-title {
   padding: 55px 0;
   text-align: center;
@@ -204,4 +208,32 @@ a {
   padding: 10px 28px;
   text-transform: uppercase;
   width: fit-content;
+}
+
+.clients .main-title {
+  background: white;
+  color: #3d3d3d;
+  padding-bottom: 80px;
+}
+
+.clients .clients-wrapper {
+  margin: 0 45px 80px;
+}
+
+.clients .clients-wrapper .image-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.clients .clients-wrapper .image-wrapper:first-child {
+  margin-bottom: 85px;
+}
+
+.clients .clients-wrapper .image-wrapper .image {
+  display: inline-block;
+  width: 250px;
+}
+
+.clients .clients-wrapper .image-wrapper .image .client-image {
+  margin: 0 auto;
 }
