--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,5 @@
 @import 'header.scss';
 @import 'nav.scss';
 @import 'about-us.scss';
-@import 'our-services'
+@import 'our-services';
+@import 'clients.scss';
