Added footer styles.

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,14 @@ a {
   color: white;
 }
 
+li {
+  cursor: pointer;
+}
+
+input:focus {
+  outline: none;
+}
+
 .button {
   text-align: center;
   cursor: pointer;
@@ -107,11 +115,11 @@ a {
 }
 
 .main-menu ul li a:hover {
-  color: #097e89;
+  color: #0072bc;
 }
 
 .main-menu ul li .active {
-  color: #097e89;
+  color: #0072bc;
 }
 
 .about-us {
@@ -239,9 +247,9 @@ a {
 }
 
 .free-quote {
-  background: #097e89;
+  background: #0072bc;
   display: flex;
-  padding: 40px 30px;
+  padding: 40px 40px;
 }
 
 .free-quote .text-wrapper {
@@ -250,11 +258,14 @@ a {
 }
 
 .free-quote .text-wrapper .title {
-  font-size: 21px;
+  font-size: 28px;
+  font-weight: 400;
 }
 
 .free-quote .text-wrapper .text {
-  font-size: 10px;
+  font-size: 12px;
+  margin-top: 26px;
+  font-weight: 400;
 }
 
 .free-quote .form-wrapper {
@@ -263,7 +274,8 @@ a {
 }
 
 .free-quote .form-wrapper .form {
-  display: inline-block;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .free-quote .form-wrapper .form .form-element {
@@ -271,7 +283,7 @@ a {
   padding: 0;
   height: 50px;
   width: 250px;
-  background: #097e89;
+  background: #0072bc;
   border: 1px white solid;
   padding-left: 15px;
   color: white;
@@ -282,10 +294,6 @@ a {
   color: white;
 }
 
-.free-quote .form-wrapper .form .form-element:focus {
-  outline: none;
-}
-
 .free-quote .form-wrapper .form .form-element:first-child {
   border-right: none;
 }
@@ -293,8 +301,110 @@ a {
 .free-quote .form-wrapper .form .button {
   width: 100px;
   background: white;
-  color: #097e89;
+  color: #0072bc;
   padding: 0;
   font-size: 12px;
   font-weight: 600;
+}
+
+.footer {
+  display: flex;
+  padding: 40px 40px;
+  background: #373737;
+}
+
+.footer .left {
+  flex: 1 1;
+}
+
+.footer .left .footer-menu-wrapper .footer-menu {
+  display: inline-block;
+  color: white;
+  padding-left: 75px;
+}
+
+.footer .left .footer-menu-wrapper .footer-menu .headline {
+  font-weight: 700;
+  font-size: 20px;
+  cursor: context-menu;
+}
+
+.footer .left .footer-menu-wrapper .footer-menu li {
+  font-size: 14px;
+  font-weight: 300;
+  margin-bottom: 23px;
+}
+
+.footer .left .footer-menu-wrapper .footer-menu li:last-child {
+  margin-bottom: 0;
+}
+
+.footer .left .footer-menu-wrapper .footer-menu:first-child {
+  padding: 0;
+}
+
+.footer .right {
+  flex: 1 1;
+  display: flex;
+  align-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer .right .footer-formt {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.footer .right .footer-formt .form {
+  font-size: 0px;
+}
+
+.footer .right .footer-formt .form .form-element {
+  display: inline-block;
+  font-size: 16px;
+}
+
+.footer .right .footer-formt .form .input-element {
+  background: #cccccc;
+  border: none;
+  height: 44px;
+  padding-left: 15px;
+  color: #4f4e4e;
+}
+
+.footer .right .footer-formt .form .button {
+  height: 44px;
+  border: 1px white solid;
+  border-left: none;
+  background: #0072bc;
+  color: white;
+}
+
+.footer .right .social-icons {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-top: 41px;
+}
+
+.footer .right .social-icons .image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  margin-right: 9px;
+  cursor: pointer;
+  background: #2e2e2e;
+  border: #2e2e2e 1px solid;
+  border-radius: 50%;
+}
+
+.footer .right .social-icons .image-wrapper:hover {
+  background: #0072bc;
+}
+
+.footer .right .social-icons .image-wrapper:last-child {
+  margin: 0;
 }
